--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,6 +1,6 @@
 filter=-legal/copyright,-whitespace/braces
 linelength=120
-root=src
+root=knp
 
 # - Do not check access modifier indentation.
 #   CPPLint enforces +1, but our rule is no indentation.
@@ -14,4 +14,6 @@ root=src
 #  Is this a non-const reference? If so, make const or use a pointer: PopulationType &population.
 # - build/c++11 - don't check headers blacklisted by Google.
 #  Chromium team uses own headers instead of standard.
-filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11
+# - whitespace/newline
+#  An else should appear on the same line as the preceding }
+filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11,-whitespace/newline
