--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 if (UNIX)
     add_subdirectory("lwip_example")
+    add_subdirectory("microhttpd-example")
     add_subdirectory("cpp-httplib-example")
     add_subdirectory("curl-example")
     add_subdirectory("restbed-example")
