--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 version: "3"
 
 services:
-  gb:
-    image: "artiomn/gb-build-image"
+  nb:
+    image: "artiomn/nb-build-image"
     network_mode: host
     environment:
       - EXT_UID=1000
       - EXT_GID=1000
-    # Need for Yggdrasil run.
-    privileged: true
+    # privileged: true
     working_dir: /usr/src/gb
     volumes:
       - .:/usr/src/gb
-
