cURL examples improved

--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -4,6 +4,7 @@ if (UNIX)
     add_subdirectory("lwip_example")
     add_subdirectory("microhttpd-example")
     add_subdirectory("cpp-httplib-example")
-    add_subdirectory("curl-example")
+    add_subdirectory("curl-download-example")
+    add_subdirectory("curl-post-example")
     add_subdirectory("restbed-example")
 endif()
