--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 if (UNIX)
     add_subdirectory("lwip_example")
     add_subdirectory("microhttpd-example")
+    add_subdirectory("libhttpserver-example")
     add_subdirectory("cpp-httplib-example")
     add_subdirectory("curl-download-example")
     add_subdirectory("curl-post-example")
