--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -157,8 +157,16 @@ RUN apt-get update \
   && cmake --install . --prefix "/usr/local" \
   && cd / \
   && rm -rf tgbot-cpp \
-  && pip3 install atheris thriftpy2 flatbuffers \
+  && pip3 install atheris flatbuffers gil thriftpy2 \
   && pip3 install --extra-index-url "https://gitlab.com/api/v4/projects/19904939/packages/pypi/simple" pythonfuzz \
+  && cd / \
+  && git clone --depth 1 https://github.com/chronoxor/CppServer.git \
+  && cd CppServer \
+  && gil update \
+  && cd build \
+  && ./unix.sh \
+  && cd / \
+  && rm -rf CppServer \
   && ldconfig \
   && apt-get clean
 
