--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -177,13 +177,27 @@ RUN \
   && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build_linux . \
   && cmake --build build_linux --parallel \
   && cmake --install build_linux --prefix "/usr/local" \
+  && mkdir /usr/local/include/CppServer \
+  && cp -a modules/CppCommon/include /usr/local/include/CppCommon \
+  && cp -a include/server /usr/local/include/CppServer/ \
+  && find build_linux/ -iname \*.a -exec cp {} /usr/local/lib \; \
+  && cp -a build_linux/cppserver-* /usr/local/bin/ \
+  && cd modules/CppCommon/modules/fmt \
+  && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local \
+  && cmake --build . --parallel \
+  && cmake --install .  --prefix "/usr/local" \
+  && cd /CppServer/modules/asio/asio \
+  && ./autogen.sh \
+  && ./configure \
+  && make -j16 \
+  && make install \
   && cd / \
   && rm -rf CppServer \
   && git clone --depth 1 https://github.com/matt-42/lithium.git \
   && cd lithium \
   && cmake -B build -DCMAKE_INSTALL_PREFIX=/usr/local . \
   && cmake --build build --parallel \
-  && cmake --install buid --prefix "/usr/local" \
+  && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf lithium \
   && ldconfig
