OatPP and MRJob examples added

--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -9,4 +9,5 @@ if (UNIX)
     add_subdirectory("curl-post-example")
     add_subdirectory("restbed-example")
     add_subdirectory("cppserver-example")
+    add_subdirectory("oatpp-example")
 endif()
