--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -153,7 +153,7 @@ repos:
     rev: 1.7.4
     hooks:
       - id: bandit
-        args: ["-r", "-lll"]
+        args: ["-r", "-lll", "-c", ".bandit"]
         exclude: ".*fixtures"
 
 
