--- a/src/.pylintrc
+++ b/src/.pylintrc
@@ -7,7 +7,7 @@ extension-pkg-whitelist=tensorflow.keras, pydantic
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=tests, ssl, ci, train, conftest.py, db_migrations, useless, trash
+ignore=tests, ssl, ci, train, conftest.py, db_migrations, useless, trash, li
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
