--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -201,6 +201,13 @@ RUN \
   && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf lithium \
+  && git clone --depth 1 https://github.com/libp2p/cpp-libp2p.git \
+  && cd cpp-libp2p \
+  && cmake -DCLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build . \
+  && cmake --build build --parallel \
+  && cmake --install build --prefix "/usr/local" \
+  && cd / \
+  && rm -rf cpp-libp2p \
   && ldconfig
 
 COPY ./entry.sh /
