Lithium buid dependency added

--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -25,6 +25,7 @@ RUN apt-get update \
     libgtk2.0-dev \
     libgtk-3-dev \
     libgrpc++-dev \
+    libmariadb-dev \
     libmicrohttpd-dev \
     libpcap-dev \
     libplack-perl \
