Simple blockchain added

--- a/src/ch20/cpp/CMakeLists.txt
+++ b/src/ch20/cpp/CMakeLists.txt
@@ -5,4 +5,5 @@ if (UNIX)
     add_subdirectory("libtorrent")
     add_subdirectory("openmpi_example")
     add_subdirectory("boost_mpi_example")
+    add_subdirectory("simple_blockchain")
 endif()
