--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -156,11 +156,11 @@ repos:
         args: ["-r", "-lll", "-c", ".bandit"]
         exclude: ".*fixtures"
 
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
+  # Conflicts with Bandit.
+  # - repo: https://github.com/pycqa/isort
+  #  rev: 5.12.0
+  #  hooks:
+  #    - id: isort
 
   #
   # Markdown
