Netlink examples fixed

--- a/src/ch05/cpp/CMakeLists.txt
+++ b/src/ch05/cpp/CMakeLists.txt
@@ -7,6 +7,7 @@ if (UNIX)
     add_subdirectory("netlink")
     add_subdirectory("sockdiag")
     add_subdirectory("ethtool")
+    add_subdirectory("mii_example")
 endif()
 
 if (APPLE)
