--- a/src/ch05/cpp/netlink/CMakeLists.txt
+++ b/src/ch05/cpp/netlink/CMakeLists.txt
@@ -2,9 +2,5 @@ cmake_minimum_required(VERSION 3.10)
 
 project("${CHAPTER_NAME}netlink" C CXX)
 
-set(${PROJECT_NAME}_SRC main.cpp)
-
-source_group(source FILES ${${PROJECT_NAME}_SRC}})
-
-add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-target_link_libraries("${PROJECT_NAME}" socket-wrapper)
+add_executable("${PROJECT_NAME}-uevent" uevent.cpp)
+add_executable("${PROJECT_NAME}-mtu" mtu.cpp)
