--- a/src/ch13/cpp/boost_beast_coroutine_htpp_client/CMakeLists.txt
+++ b/src/ch13/cpp/boost_beast_coroutine_htpp_client/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 3.10)
 
 project("${CHAPTER_NAME}beast-http-client" C CXX)
 
-find_package(Boost REQUIRED coroutine)
+find_package(Boost COMPONENTS coroutine)
+
+if (NOT Boost_FOUND)
+	message(WARNING "Please install Boost::Coroutine library!")
+endif()
 
 set(${PROJECT_NAME}_SRC main.cpp)
 source_group(source FILES ${${PROJECT_NAME}_SRC}})
