--- a/src/ch13/cpp/CMakeLists.txt
+++ b/src/ch13/cpp/CMakeLists.txt
@@ -1,8 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
 
-add_subdirectory("qt_broadcastsender")
-add_subdirectory("qt_broadcastreceiver")
-add_subdirectory("qt-tcp-server")
+find_package(Qt6 QUIET)
+
+if (DEFINED Ot6_DIR OR Qt6_DIR)
+    add_subdirectory("qt_broadcastsender")
+    add_subdirectory("qt_broadcastreceiver")
+    add_subdirectory("qt-tcp-server")
+else()
+    message(WARNING "Please install Qt6 librarires!")
+endif()
 
 if (UNIX)
 # To build this lesson code on Windows, libraries must be installed manually.
