--- a/src/ch14/cpp/CMakeLists.txt
+++ b/src/ch14/cpp/CMakeLists.txt
@@ -2,7 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 
 add_subdirectory(csv_parser)
 add_subdirectory(thrift)
-add_subdirectory(flatbuffers)
+
+find_package(flatbuffers)
+
+if (flatbuffers_FOUND)
+    add_subdirectory(flatbuffers)
+else()
+    message(WARNING "Please install Flatbuffers!")
+endif()
 
 if (UNIX)
     add_subdirectory("phistache-example")
