--- a/src/ch07/cpp/simple_http_proxy/CMakeLists.txt
+++ b/src/ch07/cpp/simple_http_proxy/CMakeLists.txt
@@ -9,8 +9,6 @@ source_group(source FILES ${${PROJECT_NAME}_SRC}})
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
 target_link_libraries("${PROJECT_NAME}" socket-wrapper)
 
-if(WIN32)
-  target_link_libraries("${PROJECT_NAME}" wsock32 ws2_32)
-else()
-  target_link_libraries("${PROJECT_NAME}" pthread)
+if (UNIX)
+    target_link_libraries("${PROJECT_NAME}" pthread)
 endif()
