Chapter 10 style fixes

--- a/src/ch10/cpp/tcp_congestion_control/CMakeLists.txt
+++ b/src/ch10/cpp/tcp_congestion_control/CMakeLists.txt
@@ -5,4 +5,4 @@ project("${CHAPTER_NAME}congestion-control" C CXX)
 set(${PROJECT_NAME}_SRC main.cpp)
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
-
+target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
