--- a/src/ch10/cpp/mt_server/CMakeLists.txt
+++ b/src/ch10/cpp/mt_server/CMakeLists.txt
@@ -9,9 +9,6 @@ source_group(source FILES ${${PROJECT_NAME}_SRC}})
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
 target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
 
-if(WIN32)
-  target_link_libraries("${PROJECT_NAME}" PRIVATE wsock32 ws2_32)
-else()
+if(NOT WIN32)
   target_link_libraries("${PROJECT_NAME}" PRIVATE pthread)
 endif()
-
