--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -206,8 +206,8 @@ RUN \
 #  && rm -rf lithium \
   && git clone --depth 1 https://github.com/libp2p/cpp-libp2p.git \
   && cd cpp-libp2p \
-  && cmake -DCLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build . \
-  && cmake --build build --parallel \
+  && LANG=en_US.UTF-8 cmake -DCLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build . \
+  && LANG=en_US.UTF-8 cmake --build build --parallel \
   && cmake --install build --prefix "/usr/local" \
   && cd / \
   && rm -rf cpp-libp2p \
