--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -36,6 +36,7 @@ RUN apt-get update \
     libthrift-dev \
     libtorrent-dev \
     libtorrent-rasterbar-dev \
+    liburing \
     less \
     meson \
     mpi-default-dev \
@@ -205,13 +206,13 @@ RUN \
 #  && cmake --install build --prefix "/usr/local" \
 #  && cd / \
 #  && rm -rf lithium \
-  && git clone --depth 1 https://github.com/libp2p/cpp-libp2p.git \
-  && cd cpp-libp2p \
-  && LANG=en_US.UTF-16LE cmake -DCLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build . \
-  && LANG=en_US.UTF-16LE cmake --build build --parallel \
-  && cmake --install build --prefix "/usr/local" \
-  && cd / \
-  && rm -rf cpp-libp2p \
+#  && git clone --depth 1 https://github.com/libp2p/cpp-libp2p.git \
+#  && cd cpp-libp2p \
+#  && cmake -DCLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build . \
+#  && cmake --build build --parallel \
+#  && cmake --install build --prefix "/usr/local" \
+#  && cd / \
+#  && rm -rf cpp-libp2p \
   && ldconfig
 
 COPY ./entry.sh /
