--- a/src/ch20/cpp/simple_blockchain/CMakeLists.txt
+++ b/src/ch20/cpp/simple_blockchain/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project("${CHAPTER_NAME}simple-blockchain" C CXX)
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(OpenSSL REQUIRED)
 find_package(Boost REQUIRED)
 
