--- a/src/ch11/cpp/CMakeLists.txt
+++ b/src/ch11/cpp/CMakeLists.txt
@@ -9,4 +9,6 @@ if (UNIX)
     add_subdirectory("c_ares_example")
     add_subdirectory("asio_server")
     add_subdirectory("aio_example")
+    add_subdirectory("epoll_example")
+#    add_subdirectory("ioring_server")
 endif()
