--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -77,6 +77,7 @@ RUN apt-get update \
     thrift-compiler \
     valgrind \
     vim \
+    zip \
 #    yggdrasil \
   && systemctl disable apache2 \
   && systemctl disable nginx \
@@ -199,13 +200,15 @@ RUN \
   && make install \
   && cd / \
   && rm -rf CppServer \
-#  && git clone --depth 1 https://github.com/matt-42/lithium.git \
-#  && cd lithium \
-#  && cmake -B build -DCMAKE_INSTALL_PREFIX=/usr/local . \
-#  && cmake --build build --parallel \
-#  && cmake --install build --prefix "/usr/local" \
-#  && cd / \
-#  && rm -rf lithium \
+  && git clone --recurse-submodules --depth 1 https://github.com/matt-42/lithium.git \
+  && cd lithium \
+  && ./vcpkg/bootstrap-vcpkg.sh \
+  && vcpkg/vcpkg install \
+  && cmake -DCMAKE_INSTALL_PREFIX=/usr/local -DCMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake . \
+  && cmake --build . --parallel \
+  && cmake --install . --prefix "/usr/local" \
+  && cd / \
+  && rm -rf lithium \
 #  && git clone --depth 1 https://github.com/libp2p/cpp-libp2p.git \
 #  && cd cpp-libp2p \
 #  && cmake -DCLANG_TIDY=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local -G "Ninja" -B build . \
