Lithium installation fixed

--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -9,6 +9,6 @@ if (UNIX)
     add_subdirectory("curl-post-example")
     add_subdirectory("restbed-example")
     add_subdirectory("cppserver-example")
-#    add_subdirectory("lithium-example")
+    add_subdirectory("lithium-example")
     add_subdirectory("oatpp-example")
 endif()
