--- a/src/ch17/cpp/lithium-example/CMakeLists.txt
+++ b/src/ch17/cpp/lithium-example/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 project("${CHAPTER_NAME}lithium-example" C CXX)
 
-set(CURL_NO_CURL_CMAKE ON)
-find_library(CPP_SERVER REQUIRED NAMES cppserver)
+# Header-only library.
+# find_library(CPP_SERVER REQUIRED NAMES lithium)
 
 add_executable("${PROJECT_NAME}" "main.cpp")
