Asio syc server example added

--- a/src/ch11/cpp/CMakeLists.txt
+++ b/src/ch11/cpp/CMakeLists.txt
@@ -7,6 +7,8 @@ if (UNIX)
     add_subdirectory("libevpp_echo_server")
     add_subdirectory("libuv_echo_server")
     add_subdirectory("c_ares_example")
+    add_subdirectory("asio_buffers")
+    add_subdirectory("asio_sync_server")
     add_subdirectory("asio_server")
     add_subdirectory("aio_example")
     add_subdirectory("epoll_example")
