--- a/src/ch06/cpp/CMakeLists.txt
+++ b/src/ch06/cpp/CMakeLists.txt
@@ -6,4 +6,5 @@ if (WIN32)
     add_subdirectory("udp_exchange_client")
     add_subdirectory("udp_exchange_server")
     add_subdirectory("simple_slient")
+    add_subdirectory("tcp_server")
 endif()
