--- a/src/ch06/cpp/CMakeLists.txt
+++ b/src/ch06/cpp/CMakeLists.txt
@@ -5,6 +5,6 @@ if (WIN32)
     add_subdirectory("wping")
     add_subdirectory("udp_exchange_client")
     add_subdirectory("udp_exchange_server")
-    add_subdirectory("simple_slient")
+    add_subdirectory("simple_client")
     add_subdirectory("tcp_server")
 endif()
