--- a/src/ch06/cpp/CMakeLists.txt
+++ b/src/ch06/cpp/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required(VERSION 3.10)
 if (WIN32)
     add_subdirectory("pil")
     add_subdirectory("wping")
+    add_subdirectory("iocp_server")
 endif()
