--- a/src/ch06/cpp/CMakeLists.txt
+++ b/src/ch06/cpp/CMakeLists.txt
@@ -7,4 +7,5 @@ if (WIN32)
     add_subdirectory("udp_exchange_server")
     add_subdirectory("simple_client")
     add_subdirectory("tcp_server")
+    add_subdirectory("service_base")
 endif()
