--- a/src/ch06/cpp/service_base/CMakeLists.txt
+++ b/src/ch06/cpp/service_base/CMakeLists.txt
@@ -1,5 +1,4 @@
 cmake_minimum_required(VERSION 3.10)
-
 project("${CHAPTER_NAME}service_base" C CXX)
 
 set(${PROJECT_NAME}_SRC main.cpp)
@@ -7,3 +6,4 @@ set(${PROJECT_NAME}_SRC main.cpp)
 source_group(source FILES ${${PROJECT_NAME}_SRC}})
 
 add_executable("${PROJECT_NAME}" "${${PROJECT_NAME}_SRC}")
+target_link_libraries("${PROJECT_NAME}" PUBLIC wsock32 ws2_32 socket-wrapper)
