--- a/src/ch13/cpp/CMakeLists.txt
+++ b/src/ch13/cpp/CMakeLists.txt
@@ -6,6 +6,7 @@ if (DEFINED Ot6_DIR OR Qt6_DIR)
     add_subdirectory("qt_broadcastsender")
     add_subdirectory("qt_broadcastreceiver")
     add_subdirectory("qt-tcp-server")
+    add_subdirectory("qt-interfaces")
 else()
     message(WARNING "Please install Qt6 librarires!")
 endif()
