CppServer temporary disabled

--- a/src/ch17/cpp/CMakeLists.txt
+++ b/src/ch17/cpp/CMakeLists.txt
@@ -8,7 +8,7 @@ if (UNIX)
     add_subdirectory("curl-download-example")
     add_subdirectory("curl-post-example")
     add_subdirectory("restbed-example")
-    add_subdirectory("cppserver-example")
+#    add_subdirectory("cppserver-example")
     add_subdirectory("lithium-example")
     add_subdirectory("oatpp-example")
 endif()
