--- a/src/ch16/cpp/openssl-socket-server/CMakeLists.txt
+++ b/src/ch16/cpp/openssl-socket-server/CMakeLists.txt
@@ -5,5 +5,5 @@ project(openssl-socket-server C CXX)
 find_package(OpenSSL REQUIRED)
 
 add_executable("${PROJECT_NAME}" "main.cpp")
-target_link_libraries("${PROJECT_NAME}" pthread OpenSSL::SSL OpenSSL::Crypto)
-# target_link_libraries("${PROJECT_NAME}" socket-wrapper)
+target_link_libraries("${PROJECT_NAME}" PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
