--- a/src/ch16/cpp/openssl-socket-server/CMakeLists.txt
+++ b/src/ch16/cpp/openssl-socket-server/CMakeLists.txt
@@ -5,7 +5,7 @@ project(${CHAPTER_NAME}openssl-socket-server C CXX)
 find_package(OpenSSL REQUIRED)
 
 add_executable("${PROJECT_NAME}" "main.cpp")
-target_link_libraries("${PROJECT_NAME}" PRIVATE pthread OpenSSL::SSL OpenSSL::Crypto)
+target_link_libraries("${PROJECT_NAME}" PRIVATE OpenSSL::SSL OpenSSL::Crypto)
 target_link_libraries("${PROJECT_NAME}" PRIVATE socket-wrapper)
 
 if(UNIX)
