--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get update \
     gdbserver \
     golang-go \
     gosu \
+    gunicorn \
     inetutils-ping \
     iproute2 \
     libboost-all-dev \
@@ -91,6 +92,7 @@ RUN apt-get update \
     tcpdump \
     thrift-compiler \
     tmux \
+    uwsgi \
     valgrind \
     vim \
     zip \
@@ -191,7 +193,7 @@ RUN \
   && cmake --install . --prefix "/usr/local" \
   && cd / \
   && rm -rf tgbot-cpp \
-  && pip3 install --break-system-packages scapy pythonping ping3 atheris curio flatbuffers gil thriftpy2 mrjob libp2p \
+  && pip3 install --break-system-packages scapy pythonping ping3 atheris curio flatbuffers gil thriftpy2 mrjob libp2p bjoern \
   && pip3 install --break-system-packages --extra-index-url "https://gitlab.com/api/v4/projects/19904939/packages/pypi/simple" pythonfuzz \
 #  && cd / \
 #  && git clone --depth 1 https://github.com/chronoxor/CppServer.git \
