Chapter 14 examples fixed

--- a/src/docker_images/build_image/Dockerfile
+++ b/src/docker_images/build_image/Dockerfile
@@ -33,6 +33,7 @@ RUN apt-get update \
     libevent-2\* libevent-dev libev-dev libuv1-dev \
     libc-ares-dev \
     libpoco-dev \
+    libprotobuf-dev \
     libthrift-[0-9.]\+ \
     libthrift-dev \
     libtorrent-dev \
