--- a/src/ch11/cpp/CMakeLists.txt
+++ b/src/ch11/cpp/CMakeLists.txt
@@ -16,8 +16,6 @@ if (UNIX)
     add_subdirectory("c_ares_example")
     add_subdirectory("asio_resolver")
 #    add_subdirectory("ioring_server")
-
-endif()
-if(WIN32)
+elseif(WIN32)
     add_subdirectory("iocp_server")
 endif()
